--- a/styles/style.css
+++ b/styles/style.css
@@ -97,9 +97,9 @@ blockquote {
   margin-bottom: opx;
 }
 
-.address {
-  /* address — контейнер с адресом; */
-}
+/* .address {
+ 
+} */
 
 .header__address {
   margin-right: 60px;
@@ -434,11 +434,9 @@ blockquote {
   padding-right: 24px;
   letter-spacing: 0px;
   word-spacing: 0.15px;
-  margin-top: 210px;
   line-height: 24px;
   flex-direction: column;
   display: flex;
-
   margin-top: 22px;
 }
 
