--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,9 @@ body {
 
   font-family: Raleway, sans-serif;
   font-weight: 400;
-  background-color: #000000;
-  background-color: rgba(0, 0, 0, 0.0)
+  background-color: transparent;
+  /* background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.0) */
 }
 
 h1,
