--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,10 @@ body {
   margin: 0;
 
   font-family: Raleway, sans-serif;
-  font-weight: 400; */
+  font-weight: 400;
+  background-color: #000000 */
 }
+
 
 h1,
 h2,
@@ -75,17 +77,17 @@ blockquote {
 .header__links-list-item_no-bullit {
   /* отображение маркеров кроме одного пункта меню  */
   list-style: circle;
-  margin-left: 26px;
-  letter-spacing: 0.4px;
-  word-spacing: 0.6px;
-  padding-left: 3px;
+  margin-left: 27.6px;
+  letter-spacing: 0.5px;
+  word-spacing: 1px;
+  padding-left: 0.6px;
 
   text-decoration: underline;
   text-underline-offset: 4px;
 }
 
 .header__logo {
-  transform: translate(-52%, -0.2%);
+  transform: translate(-52%, -1.2%);
 }
 
 .header__logo-image {
@@ -102,7 +104,7 @@ blockquote {
 
 .header__address {
   margin-right: 60px;
-  margin-top: 3.5px;
+  margin-top: 4px;
   line-height: 24.5px;
   letter-spacing: 1.1px;
 
@@ -539,7 +541,7 @@ blockquote {
     потому что это ссылки на внешние ресурсы; */
   display: flex;
 
-  transform: translate(1%, -25%);
+  transform: translate(-0.2%, -25%);
 }
 
 /* .footer__social-list-item {
@@ -553,5 +555,9 @@ blockquote {
 
   width: 50px;
   height: 105px;
-  margin-right: 48px;
+  margin-right: 47px;
+  margin-top: -1px;
+  margin-left: 0.2px;
+
+
 }
