--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body {
 
   font-family: Raleway, sans-serif;
   font-weight: 400;
-  background-color: #000000 */
+  background-color: #da1212 */
 }
 
 
@@ -503,7 +503,7 @@ blockquote {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  height: 300px;
+  height: 291px;
   font-size: 18;
   padding-top: 105px;
   padding-left: 52px;
