--- a/styles/style.css
+++ b/styles/style.css
@@ -411,8 +411,7 @@ position: relative;
 }
 
 .footer__social-list {
-  /* список ссылок на социальные сети. Можно не добавлять тег <nav>, 
-  потому что это ссылки на внешние ресурсы; */
+  /* список ссылок на социальные сети. */
   display: flex;
 }
 
